--- a/3.2 layout/app/src/main/res/layout/activity_linear_layout.xml
+++ b/3.2 layout/app/src/main/res/layout/activity_linear_layout.xml
@@ -1,52 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".linearLayout">
+    android:layout_height="300dp"
+    android:background="#FFFF99"
+    android:orientation="horizontal"
+    android:padding="5dp">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:background="#FFFF99"
-        android:orientation="horizontal"
-        android:padding="5dp">
+        android:layout_width="0dp"
+        android:layout_height="200dp"
+        android:layout_gravity="bottom"
+        android:layout_margin="10dp"
+        android:layout_weight="1"
+        android:background="#FF0000"
+        android:gravity="left"
+        android:orientation="vertical"
+        android:padding="10dp">
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="200dp"
-            android:layout_gravity="bottom"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:background="#FF0000"
-            android:gravity="left"
-            android:orientation="vertical"
-            android:padding="10dp">
-
-            <View
-                android:id="@+id/view"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="#00FFFF" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="200dp"
-            android:layout_gravity="top"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:background="#FF0000"
-            android:gravity="right"
-            android:orientation="vertical"
-            android:padding="10dp">
-
-            <View
-                android:id="@+id/view2"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="#00FFFF" />
-        </LinearLayout>
+        <View
+            android:id="@+id/view"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="#00FFFF" />
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="200dp"
+        android:layout_gravity="top"
+        android:layout_margin="10dp"
+        android:layout_weight="1"
+        android:background="#FF0000"
+        android:gravity="right"
+        android:orientation="vertical"
+        android:padding="10dp">
+
+        <View
+            android:id="@+id/view2"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="#00FFFF" />
+    </LinearLayout>
+</LinearLayout>
