--- a/3.2 layout/app/src/main/res/layout/activity_scroll_view.xml
+++ b/3.2 layout/app/src/main/res/layout/activity_scroll_view.xml
@@ -1,64 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ScrollView">
+    android:orientation="vertical">
 
+    <HorizontalScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="200dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <HorizontalScrollView
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="200dp"
-            tools:layout_editor_absoluteX="1dp"
-            tools:layout_editor_absoluteY="1dp">
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
+            <View
+                android:id="@+id/view3"
+                android:layout_width="400dp"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:background="#aaffff" />
 
-                <View
-                    android:id="@+id/view3"
-                    android:layout_width="400dp"
-                    android:layout_height="match_parent"
-                    android:background="#aaffff" />
+            <View
+                android:id="@+id/view4"
+                android:layout_width="400dp"
+                android:layout_height="match_parent"
+                android:background="#ffff00" />
+        </LinearLayout>
+    </HorizontalScrollView>
 
-                <View
-                    android:id="@+id/view4"
-                    android:layout_width="400dp"
-                    android:layout_height="match_parent"
-                    android:background="#ffff00" />
-            </LinearLayout>
-        </HorizontalScrollView>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryDark">
 
-        <ScrollView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimaryDark">
+            android:orientation="vertical">
 
-            <LinearLayout
+            <View
+                android:id="@+id/view5"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_height="400dp"
+                android:background="#00ff00" />
 
-                <View
-                    android:id="@+id/view5"
-                    android:layout_width="match_parent"
-                    android:layout_height="400dp"
-                    android:background="#00ff00" />
-
-                <View
-                    android:id="@+id/view6"
-                    android:layout_width="match_parent"
-                    android:layout_height="400dp"
-                    android:background="#ffffaa" />
-            </LinearLayout>
-        </ScrollView>
-    </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <View
+                android:id="@+id/view6"
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
+                android:background="#ffffaa" />
+        </LinearLayout>
+    </ScrollView>
+</LinearLayout>
