--- a/3.3 controls/app/src/main/res/layout/activity_icon.xml
+++ b/3.3 controls/app/src/main/res/layout/activity_icon.xml
@@ -28,6 +28,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="5dp"
         android:layout_marginRight="5dp"
+        android:background="@drawable/bt_drawable"
         android:text="图标在左"
         app:layout_constraintEnd_toStartOf="@+id/btn_top"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,6 +42,7 @@
         android:layout_marginLeft="5dp"
         android:layout_marginEnd="5dp"
         android:layout_marginRight="5dp"
+        android:background="@drawable/bt_drawable"
         android:text="图标在上"
         app:layout_constraintBottom_toBottomOf="@+id/btn_left"
         app:layout_constraintEnd_toStartOf="@+id/btn_right"
@@ -55,6 +57,7 @@
         android:layout_marginLeft="5dp"
         android:layout_marginEnd="5dp"
         android:layout_marginRight="5dp"
+        android:background="@drawable/bt_drawable"
         android:text="图标在右"
         app:layout_constraintBottom_toBottomOf="@+id/btn_top"
         app:layout_constraintEnd_toStartOf="@+id/btn_bottom"
@@ -69,6 +72,7 @@
         android:layout_marginLeft="5dp"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
+        android:background="@drawable/bt_drawable"
         android:text="图标在下"
         app:layout_constraintBottom_toBottomOf="@+id/btn_right"
         app:layout_constraintEnd_toEndOf="parent"
