修改购物车样式

--- a/4.5 shoppingCart/app/src/main/res/layout/activity_main.xml
+++ b/4.5 shoppingCart/app/src/main/res/layout/activity_main.xml
@@ -10,18 +10,19 @@ tools:context=".MainActivity">
     android:id="@+id/include"
     layout="@layout/activity_shopping_title" />
 
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/include">
-
-    <LinearLayout
-        android:id="@+id/ll_channel"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="5dp" />
-</ScrollView>
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include">
+
+        <LinearLayout
+            android:id="@+id/ll_channel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="5dp" />
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
