--- a/4.5 shoppingCart/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/4.5 shoppingCart/app/src/main/res/layout/activity_shopping_cart.xml
@@ -6,16 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".ShoppingCartActivity">
 
-    <include
-        android:id="@+id/include2"
-        layout="@layout/activity_shopping_title" />
-
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include2">
+        android:layout_height="wrap_content">
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -39,7 +32,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:padding="10dp">
+                    android:padding="5dp">
 
                     <TextView
                         android:layout_width="0dp"
