--- a/4.5 shoppingCart/app/src/main/res/values/colors.xml
+++ b/4.5 shoppingCart/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="white">#ffffff</color>
     <color name="grey">#cccccc</color>
     <color name="red">#ff0000</color>
+    <color name="orange_light">#ffffdd</color>
 </resources>
