--- a/6 group/app/src/main/res/values/styles.xml
+++ b/6 group/app/src/main/res/values/styles.xml
@@ -8,8 +8,8 @@
     </style>
 
     <style name="TabButton">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
         <item name="android:padding">5dp</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:gravity">center</item>
@@ -17,6 +17,15 @@
         <item name="android:textSize">12sp</item>
         <item name="android:textStyle">normal</item>
         <item name="android:textColor">@drawable/tab_text_selector</item>
+    </style>
+
+    <style name="TabText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@drawable/toolbar_text_selector</item>
     </style>
 
 </resources>
