--- a/6 group/app/src/main/res/layout/activity_tab_fragment.xml
+++ b/6 group/app/src/main/res/layout/activity_tab_fragment.xml
@@ -6,18 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".TabFragmentActivity">
 
+
     <FrameLayout
+        android:id="@+id/realtabcontent"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@android:id/tabhost"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="1dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- 碎片标签栏的id必须是@android:id/tabhost -->
-    <TabHost
+    <androidx.fragment.app.FragmentTabHost
         android:id="@android:id/tabhost"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/tabbar_height">
+        android:layout_width="0dp"
+        android:layout_height="@dimen/tabbar_height"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/realtabcontent">
 
         <!-- 这是例行公事的选项内容，实际看不到 -->
         <FrameLayout
@@ -25,5 +32,5 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_weight="0" />
-    </TabHost>
+    </androidx.fragment.app.FragmentTabHost>
 </androidx.constraintlayout.widget.ConstraintLayout>
