--- a/6 group/app/src/main/res/values/styles.xml
+++ b/6 group/app/src/main/res/values/styles.xml
@@ -28,4 +28,7 @@
         <item name="android:textColor">@drawable/toolbar_text_selector</item>
     </style>
 
+    <style name="AppCompatTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    </style>
+
 </resources>
