--- a/6 group/app/src/main/res/values/styles.xml
+++ b/6 group/app/src/main/res/values/styles.xml
@@ -28,7 +28,12 @@
         <item name="android:textColor">@drawable/toolbar_text_selector</item>
     </style>
 
-    <style name="AppCompatTheme" parent="Theme.AppCompat.Light.NoActionBar">
-    </style>
+    <style name="AppCompatTheme" parent="Theme.AppCompat.Light.NoActionBar"></style>
 
+    <style name="CustomDateDialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@color/transparent</item>
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
 </resources>
