下拉刷新冲突处理

--- a/event/app/src/main/res/values/styles.xml
+++ b/event/app/src/main/res/values/styles.xml
@@ -13,4 +13,7 @@
         <item name="android:windowBackground">@color/transparent</item>
         <item name="android:windowIsTranslucent">true</item>
     </style>
+
+    <style name="AppCompatTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    </style>
 </resources>
