--- a/8 mixture/app/src/main/res/layout/activity_web_local.xml
+++ b/8 mixture/app/src/main/res/layout/activity_web_local.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/tv_web_path"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:padding="5dp"
         android:textColor="@color/black"
@@ -20,8 +20,8 @@
 
     <WebView
         android:id="@+id/wv_assets_web"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
