--- a/8 mixture/app/src/main/res/layout/activity_web_browser.xml
+++ b/8 mixture/app/src/main/res/layout/activity_web_browser.xml
@@ -6,4 +6,100 @@
     android:layout_height="match_parent"
     tools:context=".WebBrowserActivity">
 
+    <LinearLayout
+        android:id="@+id/ll_url_bar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/blue_light"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:padding="5dp"
+            android:text="https://"
+            android:textColor="@color/black"
+            android:textSize="17sp" />
+
+        <EditText
+            android:id="@+id/et_web_url"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/editext_selector"
+            android:gravity="left|center"
+            android:inputType="textUri"
+            android:textColor="@color/black"
+            android:textSize="17sp" />
+
+        <Button
+            android:id="@+id/btn_web_go"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="快去"
+            android:textColor="@color/black"
+            android:textSize="17sp" />
+    </LinearLayout>
+
+    <WebView
+        android:id="@+id/wv_web"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ll_url_bar"
+        app:layout_constraintBottom_toTopOf="@+id/ll_img_btn"/>
+
+    <LinearLayout
+        android:id="@+id/ll_img_btn"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/blue_light"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/wv_web"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <ImageButton
+            android:id="@+id/ib_back"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:padding="5dp"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            android:src="@drawable/icon_back" />
+
+        <ImageButton
+            android:id="@+id/ib_forward"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            android:src="@drawable/icon_forward" />
+
+        <ImageButton
+            android:id="@+id/ib_refresh"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:padding="5dp"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            android:src="@drawable/icon_refresh" />
+
+        <ImageButton
+            android:id="@+id/ib_close"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:padding="5dp"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            android:src="@drawable/icon_close" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
