--- a/3.2 layout/app/src/main/res/layout/activity_constraint.xml
+++ b/3.2 layout/app/src/main/res/layout/activity_constraint.xml
@@ -4,19 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="10dp"
     tools:context=".ConstraintActivity">
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/tv_margin"
         android:layout_width="100dp"
         android:layout_height="50dp"
-        android:layout_marginStart="132dp"
-        android:layout_marginLeft="132dp"
-        android:layout_marginTop="33dp"
-        android:layout_marginBottom="205dp"
+        android:layout_marginStart="130dp"
+        android:layout_marginLeft="130dp"
+        android:layout_marginTop="30dp"
         android:background="#3F51B5"
         android:gravity="center|clip_vertical"
-        android:text="TextView1"
+        android:text="设置边距"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,9 +27,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="TextView2"
-        app:layout_constraintStart_toStartOf="@+id/textView1"
-        app:layout_constraintTop_toBottomOf="@+id/textView1" />
+        android:text="相对位置1"
+        app:layout_constraintStart_toStartOf="@+id/tv_margin"
+        app:layout_constraintTop_toBottomOf="@+id/tv_margin" />
 
     <TextView
         android:id="@+id/textView3"
@@ -37,14 +37,16 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:text="TextView3"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView1"
-        app:layout_constraintStart_toEndOf="@+id/textView1" />
+        android:text="相对位置2"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_margin"
+        app:layout_constraintStart_toEndOf="@+id/tv_margin" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
+        android:layout_marginLeft="100dp"
         android:background="#FF9800"
         android:gravity="center|clip_vertical"
         android:text="居中和偏移"
@@ -54,6 +56,78 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintVertical_bias="0.958" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:background="#D60000"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="尺寸约束"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:layout_constraintDimensionRatio="4:3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="160dp" />
+
+    <TextView
+        android:id="@+id/tv_link1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:background="#979797"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="tv_link1"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@+id/tv_link2"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="468dp" />
+
+    <TextView
+        android:id="@+id/tv_link3"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:background="#979797"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="tv_link3"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_link2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tv_link2"
+        app:layout_constraintTop_toTopOf="@+id/tv_link2" />
+
+    <TextView
+        android:id="@+id/tv_link2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:background="#979797"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="tv_link2"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_link1"
+        app:layout_constraintEnd_toStartOf="@+id/tv_link3"
+        app:layout_constraintStart_toEndOf="@+id/tv_link1"
+        app:layout_constraintTop_toTopOf="@+id/tv_link1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
