--- a/3.4 controls2/app/src/main/res/layout/activity_radio.xml
+++ b/3.4 controls2/app/src/main/res/layout/activity_radio.xml
@@ -75,8 +75,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:button="@null"
-            android:drawableLeft="@drawable/radio_selector"
+            android:button="@drawable/radio_selector"
             android:drawablePadding="10dp"
             android:text="已毕业" />
     </RadioGroup>
